# sorting_algorithms

./: CMakeLists.txt  LICENSE  README.md
examples/: main.cpp
include/: insertion_sort.hpp  merge_sort.hpp
